--- a/free-nodes/2025-9-8-free-subscribe-node.htm
+++ b/free-nodes/2025-9-8-free-subscribe-node.htm
@@ -181,16 +181,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" title="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" title="8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-subscribe-node.htm" title="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-subscribe-node.htm" title="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-high-speed-nodes.htm" title="9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -202,7 +202,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
