--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -121,6 +121,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-16">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-16-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-16-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、美国、韩国、香港、加拿大、欧洲等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-15">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、加拿大、新加坡、日本、香港、韩国等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-14-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-14-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、日本、新加坡、加拿大、香港、韩国、美国等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、日本、韩国、美国、新加坡、香港、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-12">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、日本、韩国、香港、加拿大、美国、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-11">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、加拿大、日本、欧洲、韩国、新加坡、美国等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-10">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-10-node-share-links.htm" class="xcblog-blog-url">
@@ -177,90 +261,6 @@
                                     这一次的节点更新覆盖了欧洲、加拿大、韩国、新加坡、美国、日本、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-06">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-6-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-6-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、美国、日本、加拿大、韩国、新加坡、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-05">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-5-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-5-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、新加坡、加拿大、美国、欧洲、香港、日本等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-04">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-4-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-4-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、香港、美国、加拿大、新加坡、日本、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-03">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、新加坡、美国、韩国、日本、加拿大、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-02">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、韩国、香港、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、加拿大、欧洲、香港、韩国、日本、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
                         <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share-links.htm" title="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
+                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-subscribe-node.htm" title="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-high-speed-nodes.htm" title="9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
