--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -121,6 +121,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-27">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、韩国、美国、日本、欧洲、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-26-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、加拿大、美国、韩国、日本、新加坡等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-25-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-25-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、欧洲、香港、新加坡、日本、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-24-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-24-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、日本、美国、韩国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-23">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、香港、新加坡、美国、韩国、日本等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、加拿大、美国、欧洲、新加坡、日本、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-08-21">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -145,16 +229,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share-links.htm" title="9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-node-share.htm" title="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" title="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-subscribe-node.htm" title="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
                         <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -166,7 +250,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
