--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -538,16 +538,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
+                        <li class="py-2"><a href="/news/article-146855.htm" title="突破网络边界：iPhone科学上网全攻略与深度解析">突破网络边界：iPhone科学上网全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-22-free-subscribe-node.htm" title="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-subscribe-node.htm" title="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142140.htm" title="冲突的本质与智慧：从对立到共赢的深度解析">冲突的本质与智慧：从对立到共赢的深度解析</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-node-share.htm" title="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-subscribe-node.htm" title="9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
                     </ul>
     </div>
 </div>
@@ -559,7 +559,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
