--- a/privacy.htm
+++ b/privacy.htm
@@ -177,16 +177,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-144664.htm" title="解锁极致观影体验：谷歌TV Clash全方位使用指南">解锁极致观影体验：谷歌TV Clash全方位使用指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-28-node-share.htm" title="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-144303.htm" title="突破网络封锁的利器：Lantern科学上网插件全方位使用指南">突破网络封锁的利器：Lantern科学上网插件全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-147221.htm" title="CLASH配置下载与部署全攻略：解锁网络自由的关键步骤">CLASH配置下载与部署全攻略：解锁网络自由的关键步骤</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share-links.htm" title="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" title="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" title="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-27-free-high-speed-nodes.htm" title="8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">8月27日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-node-share.htm" title="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -198,7 +198,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
